--- a/src/nba_rank/templates/base.html
+++ b/src/nba_rank/templates/base.html
@@ -12,6 +12,8 @@
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
     <link rel="stylesheet" href="{% static 'nba_rank/css/bootstrap-theme.min.css' %}">
+    <!-- Plugins -->
+    <link href="{% static 'nba_rank/css/magnific-popup.css' %}" rel="stylesheet">
 
     <!-- Own -->
     <link href="{% static 'nba_rank/css/style.css' %}" rel="stylesheet">
@@ -39,6 +41,17 @@
         {# Base #}
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+        <!-- Plugins -->
+        <script src="{% static 'nba_rank/js/jquery.magnific-popup.min.js' %}"></script>
+
+        <script>
+            $(document).ready(function () {
+                <!-- magnific-popup -->
+                $('.ajax-popup-link').magnificPopup({
+                    type: 'ajax'
+                });
+            });
+        </script>
     {% endblock base_js %}
 
     {% block extra_js %}{% endblock extra_js %}
