--- a/src/nba_rank/templates/partials/nav.html
+++ b/src/nba_rank/templates/partials/nav.html
@@ -16,7 +16,9 @@
         <div id="navbar" class="navbar-collapse collapse">
             {# Left side #}
             <ul class="nav navbar-nav">
-
+                <li>
+                    <a href="{% url 'vote' %}" class="ajax-popup-link">{{ _("vote")|capfirst }}</a>
+                </li>
             </ul>
         </div>
     </div>
