--- a/src/nba_rank/templates/partials/nav.html
+++ b/src/nba_rank/templates/partials/nav.html
@@ -17,7 +17,7 @@
             {# Left side #}
             <ul class="nav navbar-nav">
                 <li>
-                    <a href="{% url 'vote' %}" class="ajax-popup-link">{{ _("vote")|capfirst }}</a>
+                    <a href="{% url 'vote_modal' %}" class="ajax-popup-link">{{ _("vote")|capfirst }}</a>
                 </li>
             </ul>
         </div>
