--- a/src/players/templates/players/vote.html
+++ b/src/players/templates/players/vote.html
@@ -8,14 +8,16 @@
         <div class="col-md-5">
             <img src="{{ player_a.photo.url }}" alt="{{ player_a.get_full_name }}" class="img-thumbnail center-block">
 
-            <a class="btn btn-primary btn-lg btn-block" href="#" role="button">
+            <a class="btn btn-primary btn-lg btn-block" role="button"
+               href="{% url 'vote_save' player_a_key %}">
                 {{ player_a.get_full_name }} ({{ player_a.team.abbr }})
             </a>
         </div>
 
         {# Tie #}
         <div class="col-md-2" id="tie">
-            <a class="btn btn-warning btn-lg btn-block" href="#" role="button">
+            <a class="btn btn-warning btn-lg btn-block" role="button"
+               href="{% url 'vote_save' tie_key %}">
                 {{ _("tie") }}
             </a>
         </div>
@@ -24,7 +26,8 @@
         <div class="col-md-5">
             <img src="{{ player_b.photo.url }}" alt="{{ player_a.get_full_name }}" class="img-thumbnail center-block">
 
-            <a class="btn btn-primary btn-lg btn-block" href="#" role="button">
+            <a class="btn btn-primary btn-lg btn-block" role="button"
+               href="{% url 'vote_save' player_b_key %}">
                 {{ player_b.get_full_name }} ({{ player_b.team.abbr }})
             </a>
         </div>
