Added player stats to list view

--- a/src/players/templates/players/list.html
+++ b/src/players/templates/players/list.html
@@ -1,13 +1,17 @@
 {% extends 'base.html' %}
+{% load utils_tags %}
 
 {% block content %}
     <div class="col-md-12">
-        <table class="table table-bordered table-hover table-striped">
+        <table class="table table-bordered table-hover">
             <thead>
                 <tr>
                     <th>{{ _("ranking")|capfirst }}</th>
                     <th>{{ _("name")|capfirst }}</th>
                     <th>{{ _("team")|capfirst }}</th>
+                    <th>FG%</th>
+                    <th>3P%</th>
+                    <th>FT%</th>
                     <th>PTS</th>
                     <th>REB</th>
                     <th>AST</th>
@@ -23,6 +27,9 @@
                         <td>{{ rank }}</td>
                         <td>{{ player_season.player.get_full_name }}</td>
                         <td>{{ player_season.get_team_name }}</td>
+                        <td>{{ player_season.fg_pct|percentage|default:"-" }}</td>
+                        <td>{{ player_season.fg3_pct|percentage|default:"-" }}</td>
+                        <td>{{ player_season.ft_pct|percentage|default:"-" }}</td>
                         <td>{{ player_season.pts }}</td>
                         <td>{{ player_season.reb }}</td>
                         <td>{{ player_season.ast }}</td>
@@ -34,28 +41,31 @@
             </tbody>
         </table>
 
-        <div class="text-center">
-            <ul class="pagination">
-                <li class="pull-left">
-                    <a href="?page=1"><<</a>
-                </li>
+        {# Pagination #}
+        {% if is_paginated %}
+            <div class="text-center">
+                <ul class="pagination">
+                    <li class="pull-left">
+                        <a href="?page=1"><<</a>
+                    </li>
 
-                {% if page_obj.has_previous %}
-                    <li><a href="?page={{ page_obj.previous_page_number }}"><</a></li>
-                {% endif %}
+                    {% if page_obj.has_previous %}
+                        <li><a href="?page={{ page_obj.previous_page_number }}"><</a></li>
+                    {% endif %}
 
-                {% for i in paginator.page_range %}
-                    <li {% if page_obj.number == i %} class="active" {% endif %}><a href="?page={{i}}">{{i}}</a></li>
-                {% endfor %}
+                    {% for i in paginator.page_range %}
+                        <li {% if page_obj.number == i %} class="active" {% endif %}><a href="?page={{i}}">{{i}}</a></li>
+                    {% endfor %}
 
-                {% if page_obj.has_next %}
-                    <li><a href="?page={{ page_obj.next_page_number }}">></a></li>
-                {% endif %}
+                    {% if page_obj.has_next %}
+                        <li><a href="?page={{ page_obj.next_page_number }}">></a></li>
+                    {% endif %}
 
-                <li class="pull-right">
-                    <a href="?page={{ page_obj.paginator.num_pages }}">>></a>
-                </li>
-            </ul>
-        </div>
+                    <li class="pull-right">
+                        <a href="?page={{ page_obj.paginator.num_pages }}">>></a>
+                    </li>
+                </ul>
+            </div>
+        {% endif %}
     </div>
 {% endblock content %}
