Upgraded season separation

--- a/src/nba_rank/templates/base.html
+++ b/src/nba_rank/templates/base.html
@@ -7,13 +7,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>{% block title %}NBA Rank{% endblock title %}</title>
+    <title>{% block title %}Crowdfunded NBA players ranking{% endblock title %}</title>
 
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
     <link rel="stylesheet" href="{% static 'nba_rank/css/bootstrap-theme.min.css' %}">
     <!-- Plugins -->
-    <link href="{% static 'nba_rank/css/magnific-popup.css' %}" rel="stylesheet">
+    <link rel="stylesheet" href="{% static 'nba_rank/css/magnific-popup.css' %}">
 
     <!-- Own -->
     <link href="{% static 'nba_rank/css/style.css' %}" rel="stylesheet">
