--- a/src/nba_rank/static/nba_rank/css/style.css
+++ b/src/nba_rank/static/nba_rank/css/style.css
@@ -28,12 +28,23 @@ footer p {
     background: #FFF;
     padding: 20px;
     width: auto;
-    max-width: 800px;
+    max-width: 900px;
     margin: 20px auto;
 }
 
-
-/* Misc */
+/* Modal vote view */
 #tie {
-    margin-top: 100px;
+    margin: 100px auto;
+}
+
+.stats {
+    margin-top: 10px;
+}
+
+.stats p {
+    line-height: 1.5;
+}
+
+.stats strong {
+    margin-right: 5px;
 }
