--- a/src/nba_rank/templates/partials/messages.html
+++ b/src/nba_rank/templates/partials/messages.html
@@ -1,6 +1,6 @@
 {% for message in messages %}
-    <div class="alert alert-{{ message.tags }} alert-dismissible">
-        <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+    <div class="alert alert-dismissible alert-{{ message.tags }}">
+        <button type="button" class="close" data-dismiss="alert">&times;</button>
         {{ message }}
     </div>
 {% endfor %}
