Minor layout changes

--- a/src/nba_rank/templates/partials/footer.html
+++ b/src/nba_rank/templates/partials/footer.html
@@ -4,7 +4,9 @@
 <footer>
     <div class="container">
         <p class="pull-left">
-            Developed and maintained by <a href="https://github.com/pawelad">@pawelad</a>
+            <a href="https://github.com/pawelad/nba-rank" title="{{ _("source")|capfirst }}" target="_blank">
+                <i class="fa fa-github-square fa-2x"></i>
+            </a>
         </p>
 
         <p class="text-muted pull-right">
