--- a/src/nba_rank/templates/partials/nav.html
+++ b/src/nba_rank/templates/partials/nav.html
@@ -10,10 +10,10 @@
                 <span class="icon-bar"></span>
             </button>
             <a href="{% url 'index' %}" class="navbar-brand">
-                NBA Rank
+                <i class="ion-ios-basketball-outline"></i> NBA Rank
             </a>
         </div>
-        <div id="navbar" class="navbar-collapse collapse center-block">
+        <div id="navbar" class="navbar-collapse collapse">
             {# Left side #}
             <ul class="nav navbar-nav">
                 {% if available_seasons|length > 1 %}
