--- a/src/nba_rank/static/nba_rank/css/style.css
+++ b/src/nba_rank/static/nba_rank/css/style.css
@@ -15,10 +15,7 @@ footer {
     width: 100%;
     height: 60px;
     background-color: #f5f5f5;
-}
-
-footer p {
-    margin-top: 20px;
+    padding-top: 15px;
 }
 
 
@@ -31,6 +28,7 @@ footer p {
     max-width: 900px;
     margin: 20px auto;
 }
+
 
 /* Modal vote view */
 #tie {
@@ -49,7 +47,8 @@ footer p {
     margin-right: 5px;
 }
 
+
 /* Misc */
 .alert-dismissible .close {
-    top: -4px;
+    top: -5px;
 }
