--- a/src/nba_rank/templates/base.html
+++ b/src/nba_rank/templates/base.html
@@ -9,9 +9,15 @@
 
     <title>{% block title %}Crowdfunded NBA players ranking{% endblock title %}</title>
 
+    <link rel="icon" type="image/png" href="{% static 'nba_rank/img/favicon-32x32.png' %}" sizes="32x32">
+    <link rel="apple-touch-icon-precomposed" href="{% static 'nba_rank/img/favicon-152x152.png' %}" sizes="152x152">
+
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
     <link rel="stylesheet" href="{% static 'nba_rank/css/bootstrap-theme.min.css' %}">
+    <!-- Icon fonts -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
     <!-- Plugins -->
     <link rel="stylesheet" href="{% static 'nba_rank/css/magnific-popup.css' %}">
 
