--- a/src/players/templates/players/vote.html
+++ b/src/players/templates/players/vote.html
@@ -12,7 +12,7 @@
             <img src="{{ player_season_a.player.photo.url }}" alt="{{ player_season_a.player.get_full_name }}" class="img-thumbnail center-block">
 
             {# Stats #}
-            <div class="row center-block stats">
+            <div class="row text-center stats">
                 <div class="col-xs-4">
                     <p>
                         <strong>FG%</strong> {{ player_season_a.fg_pct|percentage|default:"-" }}<br>
@@ -56,7 +56,7 @@
             <img src="{{ player_season_b.player.photo.url }}" alt="{{ player_season_b.player.get_full_name }}" class="img-thumbnail center-block">
 
             {# Stats #}
-            <div class="row center-block stats">
+            <div class="row text-center stats">
                 <div class="col-xs-4">
                     <p>
                         <strong>FG%</strong> {{ player_season_b.fg_pct|percentage|default:"-" }}<br>
