--- a/src/nba_rank/templates/base.html
+++ b/src/nba_rank/templates/base.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>{% block title %}Crowdfunded NBA players ranking{% endblock title %}</title>
+    <title>{% block title %}Crowdsourced NBA players ranking{% endblock title %}</title>
 
     <link rel="icon" type="image/png" href="{% static 'nba_rank/img/favicon-32x32.png' %}" sizes="32x32">
     <link rel="apple-touch-icon-precomposed" href="{% static 'nba_rank/img/favicon-152x152.png' %}" sizes="152x152">
