--- a/src/nba_rank/templates/base.html
+++ b/src/nba_rank/templates/base.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load google_analytics %}
 
 <!doctype html>
 <html lang="en">
@@ -23,6 +24,7 @@
 
     <!-- Own -->
     <link href="{% static 'nba_rank/css/style.css' %}" rel="stylesheet">
+    {% google_analytics %}
 </head>
 
 <body>
