--- a/src/players/templates/players/vote.html
+++ b/src/players/templates/players/vote.html
@@ -38,7 +38,7 @@
             {# Vote button #}
             <a class="btn btn-primary btn-lg btn-block" role="button"
                href="{% url 'vote_save' player_season_a_key %}">
-                {{ player_season_a.player.get_full_name }} ({{ player_season_a.team.abbr }})
+                {{ player_season_a.player.get_full_name }}
             </a>
         </div>
 
@@ -82,7 +82,7 @@
             {# Vote button #}
             <a class="btn btn-primary btn-lg btn-block" role="button"
                href="{% url 'vote_save' player_season_b_key %}">
-                {{ player_season_b.player.get_full_name }} ({{ player_season_b.team.abbr }})
+                {{ player_season_b.player.get_full_name }}
             </a>
         </div>
     </div>
