Changed color of navbar text

--- a/src/nba_rank/templates/base.html
+++ b/src/nba_rank/templates/base.html
@@ -23,7 +23,7 @@
     <link rel="stylesheet" href="{% static 'nba_rank/css/magnific-popup.css' %}">
 
     <!-- Own -->
-    <link href="{% static 'nba_rank/css/style.css' %}" rel="stylesheet">
+    <link rel="stylesheet" href="{% static 'nba_rank/css/style.css' %}">
     {% google_analytics %}
 </head>
 
