--- a/src/nba_rank/static/nba_rank/css/style.css
+++ b/src/nba_rank/static/nba_rank/css/style.css
@@ -16,6 +16,12 @@ footer {
     height: 60px;
     background-color: #f5f5f5;
     padding-top: 15px;
+    line-height: 2em;
+}
+
+footer p:not(:first-child):not(:last-child) {
+    padding-right: 10px;
+    padding-left: 10px;
 }
 
 
