--- a/src/players/templates/players/ranking.html
+++ b/src/players/templates/players/ranking.html
@@ -4,7 +4,7 @@
 {% block content %}
     <div class="row">
         <div class="col-md-12">
-            <table class="table table-bordered table-hover">
+            <table class="table table-bordered table-hover table-condensed">
                 <thead>
                     <tr>
                         <th>{{ _("ranking")|capfirst }}</th>
