Removed ugly basketball icon

--- a/src/nba_rank/templates/partials/nav.html
+++ b/src/nba_rank/templates/partials/nav.html
@@ -10,7 +10,7 @@
                 <span class="icon-bar"></span>
             </button>
             <a href="{% url 'index' %}" class="navbar-brand">
-                <i class="ion-ios-basketball-outline"></i> NBA Rank
+                NBA Rank
             </a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
