Major update with addition of 'teams' and 'seasons' apps and backwards incompatible changes

--- a/src/players/templates/players/ranking.html
+++ b/src/players/templates/players/ranking.html
@@ -73,7 +73,7 @@
     <script>
         $(document).ready(function() {
             <!-- Make table striped based on ranking -->
-            $('#ranking > tbody  > tr:not(:first)').each(function() {
+            $('#ranking').find('> tbody  > tr:not(:first)').each(function() {
                 var currRanking = $(this).find("td:first").text();
                 var prev = $(this).prev();
                 var prevRanking = prev.find("td:first").text();
