Updated CDN files versions

--- a/src/nba_rank/templates/partials/footer.html
+++ b/src/nba_rank/templates/partials/footer.html
@@ -14,10 +14,7 @@
                 <p class="text-center">
                     {% total_votes as total_votes %}
                     {% blocktrans trimmed %}
-                        Created by <a href="https://pawelad.xyz" target="_blank">Paweł Adamczak</a>
-                        &nbsp;&nbsp;|&nbsp;&nbsp;
-                        Stats are updated daily via <a href="http://stats.nba.com/" target="_blank">NBA Stats</a>
-                        & <a href="https://github.com/seemethere/nba_py" target="_blank">nba_py</a>
+                        Created by <a href="https://pawelad.xyz" target="_blank">pawelad</a>
                         &nbsp;&nbsp;|&nbsp;&nbsp;
                         Total number of votes: {{ total_votes }}
                     {% endblocktrans %}
